# armageddon

./: .env  README.md  angular.json  armageddon.sqlite  diesel.toml  karma.conf.js  package-lock.json  package.json
migrations/2022-11-17-133713_create_topics/: down.sql  up.sql
src/: index.html
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/scripts/: scripts.json
src-tauri/scripts/commands/: help.lua
src-tauri/src/: main.rs
src-tauri/src/commands/: help.rs  mod.rs  prompt.rs  topics.rs  whois.rs
src-tauri/src/config/: mod.rs  prompt.rs  version.rs
src-tauri/src/settings/: mod.rs
src-tauri/src/telnet/: aliases.rs  logger.rs  mod.rs  prompt.rs  server.rs  welcome.rs
src/app/: app.component.html  app.component.spec.ts  app.component.ts  app.module.ts
src/app/shared/interfaces/: prompt-payload.interface.ts  settings.interface.ts
src/app/shared/services/: telnet.service.ts
src/app/terminal/: terminal.module.ts
src/app/terminal/components/input/: input.component.html  input.component.ts
src/app/terminal/components/player-info/: player-info.component.html  player-info.component.ts
src/app/terminal/components/stat-bar/: stat-bar.component.html  stat-bar.component.ts
src/app/terminal/interfaces/: stat-bar.interface.ts
src/app/terminal/view/terminal/: terminal.component.html  terminal.component.ts
