[package]
authors = ["you"]
default-run = "app"
description = "A Tauri App"
edition = "2021"
license = ""
name = "app"
repository = ""
rust-version = "1.59"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = {version = "1.2.0", features = [] }

[dependencies]
ansi_term = "0.12"
async-trait = "0.1"
regex = "1"
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
socket2 = "0.4.7"
tauri = {version = "1.2.0", features = [] }
tokio = {version = "1", features = ["full"] }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
# this feature is used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
